--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,54 @@
-node_modules/
-dist/
+# Logs
+logs
 *.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+node_modules
 .DS_Store
-coverage/
+dist
+dist-ssr
+coverage
+*.local
+
+/cypress/videos/
+/cypress/screenshots/
+
+# Editor directories and files
+.idea
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
 *.tsbuildinfo
+
+test-results/
+playwright-report/
+
+# Auto import generated files
+.eslintrc-auto-import.json
+src/types/auto-imports.d.ts
+src/types/components.d.ts
+playground/types/auto-imports.d.ts
+playground/types/components.d.ts
+
+.vite-inspect/
+
+# ESLint cache
 .eslintcache
+
+# TypeScript build info
+node_modules/.tmp/
+
+# TypeScript Project References symlinks (auto-generated)
+packages/kit/form
+packages/kit/core
+
+# VitePress
+docs/.vitepress/dist
+docs/.vitepress/cache
