--- a/package.json
+++ b/package.json
@@ -43,21 +43,18 @@
     "publish:major": "pnpm run check:branch && pnpm version major && pnpm publish"
   },
   "peerDependencies": {
-    "@antfu/eslint-config": "^6.2.0",
-    "eslint": "^9.0.0",
-    "eslint-plugin-format": "^1.0.0",
-    "eslint-plugin-unused-imports": "^4.3.0"
+    "eslint": "^9.0.0"
   },
   "dependencies": {
+    "@antfu/eslint-config": "^6.2.0",
+    "eslint-plugin-format": "^1.0.2",
+    "eslint-plugin-unused-imports": "^4.3.0",
     "jiti": "^2.6.1"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^6.2.0",
     "@commitlint/cli": "^20.1.0",
     "@iswangh/commitlint-config": "^0.1.2",
     "eslint": "^9.39.1",
-    "eslint-plugin-format": "^1.0.2",
-    "eslint-plugin-unused-imports": "^4.3.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.6",
     "typescript": "^5.9.3"
